# neutrino_bsc_26

./: .gitignore  figures.ipynb  main.ipynb  nn_example.ipynb  param_sweep_exploration.ipynb  parameter_sweep.txt  pyproject.toml  quantitative_data.ipynb  root-demo.ipynb
archive/: the_interpolator.ipynb
data/nuwro_testdata/: eventsout.root.par  eventsout.root.txt
data/sf_nu_responses/: R00_q_0.05.txt  R00_q_0.075.txt  R00_q_0.1.txt  R00_q_0.125.txt  R00_q_0.15.txt  R00_q_0.175.txt  R00_q_0.2.txt  R00_q_0.225.txt  R00_q_0.25.txt  R00_q_0.275.txt  R00_q_0.3.txt  R00_q_0.325.txt  R00_q_0.35.txt  R00_q_0.375.txt  R00_q_0.4.txt  R00_q_0.425.txt  R00_q_0.45.txt  Rxx_q_0.05.txt  Rxx_q_0.075.txt  Rxx_q_0.1.txt  Rxx_q_0.125.txt  Rxx_q_0.15.txt  Rxx_q_0.175.txt  Rxx_q_0.2.txt  Rxx_q_0.225.txt  Rxx_q_0.25.txt  Rxx_q_0.275.txt  Rxx_q_0.3.txt  Rxx_q_0.325.txt  Rxx_q_0.35.txt  Rxx_q_0.375.txt  Rxx_q_0.4.txt  Rxx_q_0.425.txt  Rxx_q_0.45.txt  Rxy_q_0.05.txt  Rxy_q_0.075.txt  Rxy_q_0.1.txt  Rxy_q_0.125.txt  Rxy_q_0.15.txt  Rxy_q_0.175.txt  (+11 more)
figures/: figures.ipynb
modules/: NNEval.py  constants.py  interpolation_preprocess.py  loaddata.py  loadroot.py  nn.py  nuwro.py  utils.py
